--- a/src/app/assets/stylesheets/profiles.scss
+++ b/src/app/assets/stylesheets/profiles.scss
@@ -1,3 +1,36 @@
 // Place all the styles related to the profiles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+body {
+    background: rgba(203, 190, 14, 0.322);
+    
+    height: 100vh;
+    section {
+        color: black;
+        .field-wrapper {
+            background:rgba(128, 128, 128, 0.603);
+            padding: 20px;
+            border-style: solid;
+            border-width: 2px;
+            display: grid;
+            justify-content: center;
+            width: 200px;
+            margin-left: 50px;
+            margin-top: 50px;
+            .actions {
+                background: rgb(203, 190, 14);
+            }
+        }
+        h2 {
+            font-size: 2rem;
+            text-align: center;
+        }
+        h1 {
+            font-size: 3.5rem;
+            text-align: center;
+        }
+        
+}
+}
