--- a/src/app/views/layouts/_header.html.erb
+++ b/src/app/views/layouts/_header.html.erb
@@ -13,20 +13,19 @@
 
   <body>
     <nav class= "header">
-        <% if runner_signed_in?%>
-        <p> Current User: <%= current_runner.first_name %></p>
-        <% else %>
-        <p></p>
-        <% end %>
-        <p id="title"><%= image_tag("Runnerfy_logo_app.png", :alt => "runnerfy_logo", id: "img1") %></p>
+        <div id="title"><%= link_to(image_tag("Runnerfy_logo_app.png", :alt => "runnerfy_logo", id: "img1"), root_path) %></div>
+        <div class="links">
         <ul>
-            <li><%= link_to("HOME", root_path, class: "links") %></li>
             <li><%= link_to("SEARCH", profiles_path, class: "links") %></li>
             <li><%= link_to("ABOUT US", pages_about_us_path, class: "links") %></li>
-
             <%if current_runner %>
             <li><%= link_to("EDIT PROFILE", edit_runner_path(current_runner), class: "links") %></li>
-            <li><%= link_to("MY PROFILE", runner_path(current_runner), class: "links") %></li>
+            <!-- <li><% if runner_signed_in?%>
+              <%= current_runner.profile.username %>
+              <% else %>
+              <p></p>
+              <% end %></li> -->
+              <%= link_to("#{current_runner.profile.username}'s PROFILE", runner_path(current_runner), class: "links") %></li>
             <% end %> 
             <li>
                 <% if current_runner %>
@@ -38,6 +37,7 @@
                 <% end %>
             </li>
         </ul>
+      </div>
     </nav>
 
 
