--- a/src/app/views/profiles/index.html.erb
+++ b/src/app/views/profiles/index.html.erb
@@ -1,59 +1,74 @@
 <!DOCTYPE html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body> 
-            <header>
-                <%= render "layouts/header" %>
-            </header>
 
-<h1>Profiles#index</h1>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+</head>
 
-<%= search_form_for @search do |f| %>
+<body>
+    <header>
+        <%= render "layouts/header" %>
+    </header>
 
- Pace: <%= f.select(:pace_eq, options_for_select([
- ["< 3min/km", "< 3min/km"], ["3-4min/km", "3-4min/km"], ["4-5min/km", "4-5min/km"], ["5-6min/km", "5-6min/km"],
- ["6-7min/km", "6-7min/km"], ["7-8min/km", "7-8min/km"], ["8-9min/km", "8-9min/km"], ["9-10min/km", "9-10min/km"],
- ["walking", "walking"]]), {include_blank: true}) %>
- <% f.collection_select :pace_eq, Profile.all, :id, :pace, include_blank: true %>
- <% f.collection_select :gender_eq, Profile.all, :id, :gender, include_blank: true %>
- Gender: <%= f.select(:gender_eq, options_for_select([['male', 'male'], ["female", "female"]]), {include_blank: true}) %>
+    <section>
+    <%= search_form_for @search do |f| %>
 
-    <%= f.submit "Search" %>
+    <div class="search-header"><h1>Seach for Runners</h1></div>
+    <div class="field-wrapper">
+        <h2>CRITERIA</h2>
+        <hr>
+    <div class="field">
+        <h3>Pace:</h3> <%= f.select(:pace_eq, options_for_select([
+        ["< 3min/km", "< 3min/km"], ["3-4min/km", "3-4min/km"], ["4-5min/km", "4-5min/km"], ["5-6min/km", "5-6min/km"],
+        ["6-7min/km", "6-7min/km"], ["7-8min/km", "7-8min/km"], ["8-9min/km", "8-9min/km"], ["9-10min/km", "9-10min/km"],
+        ["walking", "walking"]]), {include_blank: true}) %>
+    </div>
 
-<% end %>
+    <!-- <div class="field"> <% f.collection_select :pace_eq, Profile.all, :id, :pace, include_blank: true %></div>
+    <div class="field"> <% f.collection_select :gender_eq, Profile.all, :id, :gender, include_blank: true %></div> -->
 
+    <div class="field">
+        <h3>Gender:</h3>
+        <%= f.select(:gender_eq, options_for_select([['male', 'male'], ["female", "female"]]), {include_blank: true}) %>
+    </div>
+    <br>
 
-only want these to show if admin or after doing a search. Can't view all all the time? Leave if no time to fix.
-<div class="table-container"></div>
-<table class="table is-bordered is-striped is-narrow is-hoverable is-fullwidth">
-    <thead>
-    <tr >
-        <th>username</th>
-        <th>pace</th>
-        <th>gender</th>
-        <th>profile-pic</th>
-    </tr>
+    <div> <%= f.submit "Search", class: "actions" %></div>
+    
+    <% end %>
+    </div>
+
+    <div class="table-container"></div>
+    <table class="table is-bordered is-narrow is-fullwidth">
+        <thead>
+            <tr>
+                <th>username</th>
+                <th>pace</th>
+                <th>gender</th>
+                <th>profile-pic</th>
+            </tr>
         </thead>
         <tbody>
-<% @profile.each do |profile| %>
-    <tr>
-        <td><%= profile.username %>
-         <td><%= profile.pace %>
-        <td><%= profile.gender %>
-        <td><%= profile.image.attached? ? image_tag(profile.image, height: 20) : "" %></td>
-    </tr>
-<% end %> 
- </tbody>
-</table>
-</div>
+            <% @profile.each do |profile| %>
+            <tr>
+                <td><%= profile.username %>
+                <td><%= profile.pace %>
+                <td><%= profile.gender %>
+                <td><%= profile.image.attached? ? image_tag(profile.image, height: 20) : "" %></td>
+            </tr>
+            <% end %>
+        </tbody>
+    </table>
+    </div>
+
+    </section>
 
 </body>
+
 </html>
 
