--- a/src/app/assets/stylesheets/application.scss
+++ b/src/app/assets/stylesheets/application.scss
@@ -15,25 +15,40 @@
  */
 body {
   nav {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto;
     justify-content: space-between;
     align-items: center;
     background: rgb(0, 0, 0);
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    img {max-height: 60px;}
+    .links {justify-self: end;
+  
     ul {
+      justify-content: end;
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: auto auto auto auto auto auto auto auto;
+      height: 100%;
+      align-content: center;
+      li {
+        height: 100%;
+        align-self: center;
+        padding: 20px;
+   
+        &:hover {
+        color: yellow;
+      }
+    }
+  }  
     }
     #title {
       font-size: 3rem;
       color: rgb(203, 190, 14);
     }
     .links {
-
+      font-weight: bold;
       color: rgb(203, 190, 14);
       &:hover {
         color: yellow;
@@ -41,5 +56,9 @@ body {
     }
   }
 }
+$table-color: rgba(0, 0, 0, 0.747);
+$table-background-color: rgb(214, 214, 214);
+$table-cell-border: solid black;
+$table-head-cell-color: black;
 
 @import "bulma";
