--- a/src/app/views/profiles/show.html.erb
+++ b/src/app/views/profiles/show.html.erb
@@ -12,13 +12,14 @@
     <header>
       <%= render "layouts/header" %>
     </header>
-
-    <h1>Profiles#show page</h1>
-
-    <h2>Username: <%= @profile.username %></h2>
-    <h2>Age: <%= @profile.age %></h2>
-    <h2>Gender: <%= @profile.gender %></h2>
-    <h2>Pace: <%= @profile.pace %></h2>
+    <section>
+      <div class="field-wrapper">
+    <h3><strong>Username:</strong><%= @profile.username %></h3>
+    <h3>Age: <%= @profile.age %></h3>
+    <h3>Gender: <%= @profile.gender %></h3>
+    <h3>Pace: <%= @profile.pace %></h3>
     <%= @profile.image.attached? ? image_tag(@profile.image, height: 40) : "" %>
+  </div>
+  </section>
   </body>
 </html>
