Styling of the 'pages'

--- a/src/app/views/pages/home.html.erb
+++ b/src/app/views/pages/home.html.erb
@@ -17,21 +17,20 @@
                 <div id="profile-img">
                     <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img1")%>
                     <div id="overlay1">
-                        <a href="google.com"><h1>Profiles</h1></a>
+                        <a href="google.com"><h1>PROFILE</h1></a>
                     </div>
                 </div>
                 <div id="search-img">
-                    <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img2") %>
+                    <%= image_tag("running_partner.jpg", :alt => "running in forest", id: "img2") %>
                         <div id="overlay2">
-                                <h1>Runner</h1>
-                                <h1>Search</h1>
+                                 <a href="google.com"><h1>SEARCH</h1></a>
+                             
                               </div>
                 </div>
                 <div id="other-img">
-                    <%= image_tag("running_forest.jpg", :alt => "running in forest", id: "img3" )%>
+                    <%= image_tag("racers.jpg", :alt => "running in forest", id: "img3" )%>
                         <div id="overlay3">
-                                <h2>Other</h2>
-                                <h2>Option</h2>
+                                 <a href="google.com"><h1>FIND RACES</h1></a>
                               </div>
                 </div>
             </div>
