--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
-
 body {
   section {
     .home-intro-pics {
@@ -19,128 +15,111 @@ body {
         justify-self: center;
         align-self: center;
         width: 80%;
-        transition: transform 0.5s;
-        // display: inline-block;
-        background:rgb(203, 190, 14);
+        transition: transform 0.75s;
         position: relative;
         #overlay1 {
           position: absolute;
           a {text-decoration: none;}
           h1 {
-         
-          color: yellow;
+            font-size: 0rem;
           height: 500px;
-          &:hover {color: white;}}
-         padding: 4rem;
+        }
+         padding: 3rem;
           top: 0;
           left: 0;
           bottom: 0;
           width: 100%;
-          color: #fff;
-          font-size: 5rem;
-          //     opacity: 0;
-          //     h2 {font-weight: bold;
+        
         }
-        //   }
         &:hover {
+               img {
+            filter: blur(1.5px);
+          }
           transform: scale(1.05);
           #overlay1 {
             display: inline-block;
-            h1 {font-size: 6rem;}
+            h1 {font-size: 6rem;
+            color: white;
+            }
           }
           #img1 {
-      
             display: block;
             width: 100%;
           }
-          // #img1 {
-          //   filter: blur(1px);
-          //   display: block;
-          //   width: 100%;
-          //   opacity: 0.6;
-          // }
-          // #overlay1 {
-          //   opacity: 1;
-          // }
         }
       }
       #search-img {
-        justify-self: center;
+           justify-self: center;
         align-self: center;
         width: 80%;
-        transition: transform 0.5s;
-        h1 {font-size: 0rem;}
-        // display: inline-block;
-        background:  rgb(203, 190, 14);
+        transition: transform 0.75s;
+        position: relative;
         #overlay2 {
-          h1 {font-size: 0rem;}
-          padding: 6rem;
+          position: absolute;
+          a {text-decoration: none;}
+          h1 {
+            font-size: 0rem;
+          height: 500px;
+        }
+         padding: 3rem;
           top: 0;
           left: 0;
           bottom: 0;
           width: 100%;
           color: #fff;
-          font-size: 0rem;
-          }
-        // }
+        }
         &:hover {
+               img {
+            filter: blur(1.5px);
+          }
           transform: scale(1.05);
           #overlay2 {
             display: inline-block;
-            h1 {font-size: 6rem;}
+            h1 {font-size: 6rem;
+            color: yellow;
+            }
           }
           #img2 {
-            opacity: 0.8;
             display: block;
             width: 100%;
           }
-
-          //   #img2 {
-          //     filter: blur(1px);
-          //     display: block;
-          //     width: 100%;
-          //     opacity: 0.6;
-          //   }
         }
       }
       #other-img {
-        justify-self: center;
+           justify-self: center;
         align-self: center;
-        width: 80%;
-        transition: transform 0.5s;
-        // display: inline-block;
-        background: rgb(203, 190, 14);
-        h2 {
-          position: absolute;
-          display: none;
-        }
+        width: 75%;
+        transition: transform 0.75s;
+        position: relative;
         #overlay3 {
-          // position: absolute;
-          padding: 6rem;
+          position: absolute;
+          a {text-decoration: none;}
+          h1 {
+            font-size: 0rem;
+          height: 500px;
+        }
+         padding: 3rem;
           top: 0;
           left: 0;
           bottom: 0;
           width: 100%;
           color: #fff;
-          font-size: 5rem;
-          //     opacity: 0;
-          //     h2 {font-weight: bold;
-          //     }
         }
         &:hover {
+          img {
+            filter: blur(1.5px);
+          }
           transform: scale(1.05);
           #overlay3 {
             display: inline-block;
+            h1 {font-size: 6rem;
+            color: black;
+            }
           }
           #img3 {
-            filter: blur(1px);
             display: block;
             width: 100%;
-            // opacity: 0.6;
           }
-          // #overlay3 {
-          //   opacity: 1;
-          // }
         }
       }
     }
@@ -154,7 +133,6 @@ body {
       font-family: Didot, serif;
       font-size: 3rem;
       color: black;
-
       div {
         align-self: center;
         justify-self: center;
@@ -174,6 +152,54 @@ body {
     }
   }
 }
+
+  @media only screen and (min-width: 651px) and (max-width: 1200px) {
+    body {
+      section {
+        .home-intro-pics {
+          grid-template-columns: 33% 33% 33%;
+          grid-template-rows: 400px;
+          
+          #profile-img {
+            img {height: 400px;}
+            width: 100%;
+            #overlay1 {
+              h1 {font-size: 2rem;}
+            }
+            
+        }
+        #search-img {
+          img {height: 400px;}
+            width: 100%;
+            #overlay2 {
+              h1 {font-size: 2rem;}
+            }
+        }
+        #other-img {
+          img {height: 400px;}
+          width: 100%;
+          #overlay3 {
+            h1 {font-size: 2rem;}
+          }
+        }
+    }
+  }
+  }
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 body {
   section {
