Making changes to the runners controller. More directions coming from devise than that controller.

--- a/src/app/assets/stylesheets/pages.scss
+++ b/src/app/assets/stylesheets/pages.scss
@@ -76,7 +76,7 @@ body {
           #overlay2 {
             display: inline-block;
             h1 {font-size: 6rem;
-            color: yellow;
+            color: rgb(20, 20, 20);
             }
           }
           #img2 {
