--- a/src/app/views/profiles/index.html.erb
+++ b/src/app/views/profiles/index.html.erb
@@ -23,10 +23,8 @@
         <h2>CRITERIA</h2>
         <hr>
     <div class="field">
-        <h3>Pace:</h3> <%= f.select(:pace_eq, options_for_select([
-        ["< 3min/km", "< 3min/km"], ["3-4min/km", "3-4min/km"], ["4-5min/km", "4-5min/km"], ["5-6min/km", "5-6min/km"],
-        ["6-7min/km", "6-7min/km"], ["7-8min/km", "7-8min/km"], ["8-9min/km", "8-9min/km"], ["9-10min/km", "9-10min/km"],
-        ["walking", "walking"]]), {include_blank: true}) %>
+        <h3>Pace:</h3> 
+        <%= f.select(:pace_eq, options_for_select(Profile::TRAINING_PACE_LIST), {prompt: "select"}) %>
     </div>
 
     <!-- <div class="field"> <% f.collection_select :pace_eq, Profile.all, :id, :pace, include_blank: true %></div>
@@ -34,7 +32,11 @@
 
     <div class="field">
         <h3>Gender:</h3>
-        <%= f.select(:gender_eq, options_for_select([['male', 'male'], ["female", "female"]]), {include_blank: true}) %>
+        <%= f.select(:gender_eq, options_for_select(Profile::GENDER_OPTIONS), {prompt: "select"}) %>
+    </div>
+    <div class="field">
+        <h3>Age:</h3>
+        <%= f.select(:age_eq, options_for_select(Profile::AGE_RANGE), {prompt: "select"}) %>
     </div>
     <br>
 
